@@ -14,7 +14,7 @@
 platform    = atmelavr
 board       = nanoatmega328
 framework   = arduino
-build_flags = -Werror -Wall -D SIM_TEST_INPUT='"M1 A1000 V100 R3200 W t W "' -DSIMAVR_FOC_WORKAROUND
+build_flags = -Werror -Wall -D SIM_TEST_INPUT='"? M1 A1000 V100 R3200 W t W "' -DSIMAVR_FOC_WORKAROUND
 lib_extra_dirs = ../../..
 
 [env:atmega2560]
