@@ -14,7 +14,7 @@
 platform    = atmelavr
 board       = nanoatmega328
 framework   = arduino
-build_flags = -Werror -Wall -D SIM_TEST_INPUT='"t M1 01 I R W "' -DSIMAVR_FOC_WORKAROUND
+build_flags = -Werror -Wall -D SIM_TEST_INPUT='"t M1 01 R W "' -DSIMAVR_FOC_WORKAROUND
 lib_extra_dirs = ../../..
 
 [env:atmega2560]
