@@ -1,3 +1,9 @@
+pre-0.16.6:
+- bugfix in setEnablePin(): if called with PIN_UNDEFINED, that value was used with pinMode and digitalWrite()
+- Use simavr to perform regression test for avr on HW-simulation
+- Reworked the avr ISR code to avoid steps being lost, if the command queue is running out of commands and a new command comes in with steps to be generated
+- Extended the planning ahead time to 20ms.... possibly the load for avr is bit high !? 
+
 0.16.5:
 - esp32: forwardStep()/backwardStep() works again
 - Fix for issue #25: RampGenerator was irritated, if interrupt has processed command too fast.
